[gd_scene load_steps=8 format=3 uid="uid://bmwkmu11ivgrb"]

[ext_resource type="PackedScene" uid="uid://cdrs02iul2uh2" path="res://scenes/GUI/controls/buttons/gui_basic_button.tscn" id="1_4hxpy"]
[ext_resource type="Script" uid="uid://bkhoe163gli3x" path="res://scenes/GUI/controls/buttons/gui_power_button.gd" id="2_km5qa"]
[ext_resource type="Texture2D" uid="uid://bhip7cb1r1e08" path="res://resources/sprites/icons/other/tooltip_question_mark.png" id="5_km5qa"]
[ext_resource type="PackedScene" uid="uid://birms1nlswekw" path="res://scenes/GUI/bingo_main/power/gui_power.tscn" id="5_qypvj"]
[ext_resource type="Texture2D" uid="uid://cot566voterom" path="res://resources/sprites/GUI/shared/border2.png" id="6_3g4ln"]
[ext_resource type="PackedScene" uid="uid://drfnshalrvcp5" path="res://scenes/GUI/utils/progress_bar/gui_bordered_progress_bar.tscn" id="6_qypvj"]
[ext_resource type="AudioStream" uid="uid://drpg8w3lvy4fl" path="res://resources/sounds/SFX/bingo/power_ready_2.wav" id="7_3g4ln"]

[node name="GUIPowerButtonSet" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -297.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1
script = ExtResource("2_km5qa")

[node name="GUIBasicButton" parent="." instance=ExtResource("1_4hxpy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="GUIPower" parent="GUIBasicButton" instance=ExtResource("5_qypvj")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[node name="Control" type="Control" parent="GUIBasicButton"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GUIBasicButton/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 22.0
offset_bottom = 6.0
grow_vertical = 0
theme_override_constants/separation = 1

[node name="CDProgressBar" parent="GUIBasicButton/Control/HBoxContainer" instance=ExtResource("6_qypvj")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_over = ExtResource("6_3g4ln")
tint_progress = Color(1, 0.921569, 0.341176, 1)

[node name="CDLabel" type="Label" parent="GUIBasicButton/Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HUD_tiny"
text = "1/3"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ShortCutIcon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(6, 6)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TooltipTrigger" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(6, 6)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
mouse_filter = 0
texture = ExtResource("5_km5qa")
expand_mode = 1
stretch_mode = 5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_3g4ln")
volume_db = 5.0
bus = &"SFX"
